<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorToolbar">

        <ImageView
            android:id="@+id/imv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back" />

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="@dimen/_257sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:background="@drawable/edt_search"
            android:drawableRight="@drawable/ic_search"
            android:hint="@string/hint_search"
            android:padding="10dp"
            android:textColorHint="@color/colorTextSearch" />
    </Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">
    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/tv_resultnull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="@dimen/_16sdp"
        android:text="@string/result_null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rcv_search" />

    <TextView
        android:id="@+id/tv_addnew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adnew"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_resultnull"
        android:layout_marginTop="@dimen/_8sdp"
        android:textStyle="bold"
        android:textColor="@color/colorTextAdd"/>

</android.support.constraint.ConstraintLayout>